# mir-blas

./: .gitignore  .travis.yml  README.md  dub.json  dub.sdl  index.d  meson.build
.circleci/: config.yml
example/: dub.json  dub.sdl  meson.build
example/source/: app.d
source/mir/: blas.d
subprojects/: cblas.wrap  mir-algorithm.wrap
